--- a/index.html
+++ b/index.html
@@ -5,6 +5,135 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes">
     <title>X TKJ 3</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        /* Special Contributor Cards */
+        .card.contributor {
+            position: relative;
+            overflow: hidden;
+            border: 2px solid;
+            background: var(--card-bg);
+        }
+
+        .card.contributor::before {
+            content: '';
+            position: absolute;
+            top: -50%;
+            left: -50%;
+            width: 200%;
+            height: 200%;
+            background: linear-gradient(45deg, transparent, rgba(255, 255, 255, 0.1), transparent);
+            transform: rotate(45deg);
+            animation: shimmer 3s infinite;
+        }
+
+        @keyframes shimmer {
+            0% { transform: translateX(-100%) translateY(-100%) rotate(45deg); }
+            100% { transform: translateX(100%) translateY(100%) rotate(45deg); }
+        }
+
+        .card.contributor .contributor-badge {
+            position: absolute;
+            bottom: 15px;
+            right: 10px;
+            background: linear-gradient(135deg, #fbbf24 0%, #f59e0b 100%);
+            color: white;
+            padding: 4px 10px;
+            border-radius: 12px;
+            font-size: 0.75em;
+            font-weight: 700;
+            box-shadow: 0 2px 8px rgba(251, 191, 36, 0.4);
+            z-index: 2;
+            display: flex;
+            align-items: center;
+            gap: 4px;
+        }
+
+        /* Individual Contributor Colors */
+        .card.contributor-1 {
+            border-color: #3b82f6;
+            background: linear-gradient(135deg, rgba(59, 130, 246, 0.08) 0%, rgba(147, 197, 253, 0.08) 100%);
+        }
+
+        .card.contributor-1:hover {
+            box-shadow: 0 8px 30px rgba(59, 130, 246, 0.3);
+            border-color: #2563eb;
+        }
+
+        .card.contributor-2 {
+            border-color: #8b5cf6;
+            background: linear-gradient(135deg, rgba(139, 92, 246, 0.08) 0%, rgba(196, 181, 253, 0.08) 100%);
+        }
+
+        .card.contributor-2:hover {
+            box-shadow: 0 8px 30px rgba(139, 92, 246, 0.3);
+            border-color: #7c3aed;
+        }
+
+        .card.contributor-3 {
+            border-color: #ec4899;
+            background: linear-gradient(135deg, rgba(236, 72, 153, 0.08) 0%, rgba(251, 207, 232, 0.08) 100%);
+        }
+
+        .card.contributor-3:hover {
+            box-shadow: 0 8px 30px rgba(236, 72, 153, 0.3);
+            border-color: #db2777;
+        }
+
+        .card.contributor-4 {
+            border-color: #10b981;
+            background: linear-gradient(135deg, rgba(16, 185, 129, 0.08) 0%, rgba(167, 243, 208, 0.08) 100%);
+        }
+
+        .card.contributor-4:hover {
+            box-shadow: 0 8px 30px rgba(16, 185, 129, 0.3);
+            border-color: #059669;
+        }
+
+        .card.contributor-5 {
+            border-color: #f59e0b;
+            background: linear-gradient(135deg, rgba(245, 158, 11, 0.08) 0%, rgba(253, 230, 138, 0.08) 100%);
+        }
+
+        .card.contributor-5:hover {
+            box-shadow: 0 8px 30px rgba(245, 158, 11, 0.3);
+            border-color: #d97706;
+        }
+
+        /* Dark mode adjustments */
+        .dark-mode .card.contributor {
+            background: var(--card-bg);
+        }
+
+        .dark-mode .card.contributor-1 {
+            background: linear-gradient(135deg, rgba(59, 130, 246, 0.12) 0%, rgba(147, 197, 253, 0.12) 100%);
+        }
+
+        .dark-mode .card.contributor-2 {
+            background: linear-gradient(135deg, rgba(139, 92, 246, 0.12) 0%, rgba(196, 181, 253, 0.12) 100%);
+        }
+
+        .dark-mode .card.contributor-3 {
+            background: linear-gradient(135deg, rgba(236, 72, 153, 0.12) 0%, rgba(251, 207, 232, 0.12) 100%);
+        }
+
+        .dark-mode .card.contributor-4 {
+            background: linear-gradient(135deg, rgba(16, 185, 129, 0.12) 0%, rgba(167, 243, 208, 0.12) 100%);
+        }
+
+        .dark-mode .card.contributor-5 {
+            background: linear-gradient(135deg, rgba(245, 158, 11, 0.12) 0%, rgba(253, 230, 138, 0.12) 100%);
+        }
+
+        /* Responsive badge */
+        @media (max-width: 480px) {
+            .card.contributor .contributor-badge {
+                font-size: 0.7em;
+                padding: 3px 8px;
+                bottom: 12px;
+                right: 8px;
+            }
+        }
+    </style>
 </head>
 <body>
 
@@ -53,6 +182,10 @@
             <span class="nav-icon">📅</span>
             <span class="nav-label">Jadwal</span>
         </a>
+        <a href="piket.html" class="nav-item">
+            <span class="nav-icon">🧹</span>
+            <span class="nav-label">Piket</span>
+        </a>
         <a href="info.html" class="nav-item">
             <span class="nav-icon">ℹ️</span>
             <span class="nav-label">Info</span>
@@ -67,7 +200,8 @@
             <a href="detail-rohim.html" class="btn-detail">Cek Detail</a>
         </div>
 
-        <div class="card scroll-animate">
+        <div class="card scroll-animate contributor contributor-5">
+            <div class="contributor-badge">⭐ Contributor</div>
             <h3>Abdullah Khaerul Azzam</h3>
             <p><span class="label">Absen:</span> 2</p>
             <a href="detail-azzam.html" class="btn-detail">Cek Detail</a>
@@ -115,7 +249,8 @@
             <a href="detail-bagus.html" class="btn-detail">Cek Detail</a>
         </div>
 
-        <div class="card scroll-animate">
+        <div class="card scroll-animate contributor contributor-1">
+            <div class="contributor-badge">⭐ Contributor</div>
             <h3>Bayu Lutfiadi</h3>
             <p><span class="label">Absen:</span> 10</p>
             <a href="detail-bayu.html" class="btn-detail">Cek Detail</a>
@@ -127,7 +262,8 @@
             <a href="detail-farelFadilah.html" class="btn-detail">Cek Detail</a>
         </div>
 
-        <div class="card scroll-animate">
+        <div class="card scroll-animate contributor contributor-3">
+            <div class="contributor-badge">⭐ Contributor</div>
             <h3>Farrel Surya Ramadhan</h3>
             <p><span class="label">Absen:</span> 12</p>
             <a href="detail-farelSurya.html" class="btn-detail">Cek Detail</a>
@@ -139,7 +275,8 @@
             <a href="detail-garrick.html" class="btn-detail">Cek Detail</a>
         </div>
 
-        <div class="card scroll-animate">
+        <div class="card scroll-animate contributor contributor-2">
+            <div class="contributor-badge">⭐ Contributor</div>
             <h3>Haikal Fadillah</h3>
             <p><span class="label">Absen:</span> 14</p>
             <a href="detail-haikal.html" class="btn-detail">Cek Detail</a>
@@ -151,7 +288,8 @@
             <a href="detail-ihram.html" class="btn-detail">Cek Detail</a>
         </div>
 
-        <div class="card scroll-animate">
+        <div class="card scroll-animate contributor contributor-4">
+            <div class="contributor-badge">⭐ Contributor</div>
             <h3>Isabil Nuh Ardiansiah</h3>
             <p><span class="label">Absen:</span> 16</p>
             <a href="detail-isabil.html" class="btn-detail">Cek Detail</a>
