--- a/login.html
+++ b/login.html
@@ -471,6 +471,7 @@
                 'ridho': 'tkj2025',
                 'sendy': 'tkj2025',
                 'vincent': 'tkj2025',
+                'guest': '123456789',
                 
                 // Akun admin (opsional)
                 'admin': 'admin123',
