--- a/jadwal.html
+++ b/jadwal.html
@@ -671,6 +671,10 @@
             <span class="nav-icon">📅</span>
             <span class="nav-label">Jadwal</span>
         </a>
+        <a href="piket.html" class="nav-item">
+            <span class="nav-icon">🧹</span>
+            <span class="nav-label">Piket</span>
+        </a>
         <a href="info.html" class="nav-item">
             <span class="nav-icon">ℹ️</span>
             <span class="nav-label">Info</span>
