--- a/detail-bayu.html
+++ b/detail-bayu.html
@@ -182,6 +182,7 @@
         }
 
         .social-btn {
+            
             padding: 10px 20px;
             border: none;
             border-radius: 8px;
@@ -190,7 +191,7 @@
             text-decoration: none;
             cursor: pointer;
             transition: all 0.3s ease;
-            display: inline-flex;
+            display: inline-block;
             align-items: center;
             gap: 8px;
             font-size: 14px;
@@ -519,3 +520,4 @@
 
 </body>
 </html>
+
