--- a/detail-bayu.html
+++ b/detail-bayu.html
@@ -182,7 +182,7 @@
         }
 
         .social-btn {
-            
+            width:100%;
             padding: 10px 20px;
             border: none;
             border-radius: 8px;
@@ -191,7 +191,7 @@
             text-decoration: none;
             cursor: pointer;
             transition: all 0.3s ease;
-            display: inline-block;
+            display: inline-flex;
             align-items: center;
             gap: 8px;
             font-size: 14px;
@@ -520,4 +520,5 @@
 
 </body>
 </html>
+
 
