--- a/detail-fazar.html
+++ b/detail-fazar.html
@@ -191,7 +191,7 @@
 
         <p>
             <b>Umur:</b> 
-            <span id="umurText">17 Tahun</span>
+            <span id="umurText">16 Tahun</span>
             <input id="umurInput" value="-- Tahun">
         </p>
 
@@ -203,26 +203,26 @@
 
         <p>
             <b>Alamat:</b> 
-            <span id="alamatText">-</span>
-            <input id="alamatInput" value="-">
+            <span id="alamatText">Tangerang</span>
+            <input id="alamatInput" value="Tangerang">
         </p>
 
         <p>
             <b>Hobi:</b> 
-            <span id="hobiText">-</span>
-            <input id="hobiInput" value="-">
+            <span id="hobiText">Main game, gambar</span>
+            <input id="hobiInput" value="Main game, mabar">
         </p>
 
         <p>
             <b>Cita-cita:</b> 
-            <span id="citaText">Aku ingin jadi raja iblis</span>
-            <input id="citaInput" value="Aku ingin jadi raja iblis">
+            <span id="citaText">Adalah</span>
+            <input id="citaInput" value="Adalah">
         </p>
 
         <p>
             <b>Motto:</b> 
-            <span id="mottoText">-</span>
-            <input id="mottoInput" value="-">
+            <span id="mottoText">Gak bakal bisa kalau gak coba</span>
+            <input id="mottoInput" value="Gak bakal bisa kalau gak coba">
         </p>
 
         <button id="editBtn" class="btn edit">✏️ Edit</button>
@@ -284,3 +284,4 @@
 
 </body>
 </html>
+
