--- a/detail-bagus.html
+++ b/detail-bagus.html
@@ -191,8 +191,8 @@
 
         <p>
             <b>Umur:</b> 
-            <span id="umurText">-- Tahun</span>
-            <input id="umurInput" value="-- Tahun">
+            <span id="umurText">16 Tahun</span>
+            <input id="umurInput" value="16 Tahun">
         </p>
 
         <p>
@@ -209,8 +209,8 @@
 
         <p>
             <b>Hobi:</b> 
-            <span id="hobiText">-</span>
-            <input id="hobiInput" value="-">
+            <span id="hobiText">Mancing</span>
+            <input id="hobiInput" value="Mancing">
         </p>
 
         <p>
@@ -284,3 +284,4 @@
 
 </body>
 </html>
+
