--- a/detail-bagus.html
+++ b/detail-bagus.html
@@ -203,8 +203,8 @@
 
         <p>
             <b>Alamat:</b> 
-            <span id="alamatText">-</span>
-            <input id="alamatInput" value="-">
+            <span id="alamatText">Jl.hj parung kored</span>
+            <input id="alamatInput" value="Jl.hj parung kored">
         </p>
 
         <p>
@@ -215,14 +215,14 @@
 
         <p>
             <b>Cita-cita:</b> 
-            <span id="citaText">-</span>
-            <input id="citaInput" value="-">
+            <span id="citaText">Polisi</span>
+            <input id="citaInput" value="Polisi">
         </p>
 
         <p>
             <b>Motto:</b> 
-            <span id="mottoText">-</span>
-            <input id="mottoInput" value="-">
+            <span id="mottoText">Menyerah bukanlah solusi</span>
+            <input id="mottoInput" value="Menyerah bukanlah solusi">
         </p>
 
         <button id="editBtn" class="btn edit">✏️ Edit</button>
@@ -284,4 +284,5 @@
 
 </body>
 </html>
+
 
