--- a/detail-garrick.html
+++ b/detail-garrick.html
@@ -431,7 +431,7 @@
 
     <!-- ========== BACKGROUND MUSIC PLAYER ========== -->
     <audio id="bgMusic" loop>
-        <source src="Music/Bayu Lutfiadi.mp3" type="audio/mpeg">
+        <source src="Music/Garrick Elbert Chandra.mp3" type="audio/mpeg">
         Browser Anda tidak mendukung audio.
     </audio>
 
@@ -531,4 +531,5 @@
 
 </body>
 </html>
+
 
