--- a/info.html
+++ b/info.html
@@ -322,19 +322,23 @@
     <!-- Bottom Navigation -->
     <nav class="bottom-nav" id="bottomNav">
         <a href="index.html" class="nav-item">
-            <span class="nav-icon">👥</span>
+            <span class="nav-icon"><img src="Images/Icon/Siswa.png" alt="Siswa"></span>
             <span class="nav-label">Siswa</span>
         </a>
         <a href="jadwal.html" class="nav-item">
-            <span class="nav-icon">📅</span>
+            <span class="nav-icon"><img src="Images/Icon/Jadwal.png" alt="Jadwal"></span>
             <span class="nav-label">Jadwal</span>
         </a>
         <a href="piket.html" class="nav-item">
-            <span class="nav-icon">🧹</span>
+            <span class="nav-icon"><img src="Images/Icon/Piket.png" alt="Piket"></span>
             <span class="nav-label">Piket</span>
         </a>
+        <a href="tugas.html" class="nav-item">
+            <span class="nav-icon"><img src="Images/Icon/Tugas.png" alt="Tugas"></span>
+            <span class="nav-label">Tugas</span>
+        </a>
         <a href="info.html" class="nav-item active">
-            <span class="nav-icon">ℹ️</span>
+            <span class="nav-icon"><img src="Images/Icon/Info.png" alt="Info"></span>
             <span class="nav-label">Info</span>
         </a>
     </nav>
@@ -367,15 +371,15 @@
             <div class="contributors-grid">
                 <div class="contributor-card">
                     <p class="contributor-name">Bayu Lutfiadi</p>
-                    <p class="contributor-role">Developer & Tester</p>
+                    <p class="contributor-role">Developer, Idea & Tester</p>
                 </div>
                 <div class="contributor-card">
                     <p class="contributor-name">Haikal Fadillah</p>
-                    <p class="contributor-role">Developer, Designer, Content & Tester</p>
+                    <p class="contributor-role">Developer, Designer, Content, Coloring, Idea & Tester</p>
                 </div>
                 <div class="contributor-card">
                     <p class="contributor-name">Farrel Surya Ramadhan</p>
-                    <p class="contributor-role">Designer, Content & Tester</p>
+                    <p class="contributor-role">Designer, Content, Coloring, Idea & Tester</p>
                 </div>
                 <div class="contributor-card">
                     <p class="contributor-name">Isabil Nuh Ardiansiah</p>
