--- a/piket.html
+++ b/piket.html
@@ -397,19 +397,23 @@
     <!-- Bottom Navigation -->
     <nav class="bottom-nav">
         <a href="index.html" class="nav-item">
-            <span class="nav-icon">👥</span>
+            <span class="nav-icon"><img src="Images/Icon/Siswa.png" alt="Siswa"></span>
             <span class="nav-label">Siswa</span>
         </a>
         <a href="jadwal.html" class="nav-item">
-            <span class="nav-icon">📅</span>
+            <span class="nav-icon"><img src="Images/Icon/Jadwal.png" alt="Jadwal"></span>
             <span class="nav-label">Jadwal</span>
         </a>
         <a href="piket.html" class="nav-item active">
-            <span class="nav-icon">🧹</span>
+            <span class="nav-icon"><img src="Images/Icon/Piket.png" alt="Piket"></span>
             <span class="nav-label">Piket</span>
         </a>
+        <a href="tugas.html" class="nav-item">
+            <span class="nav-icon"><img src="Images/Icon/Tugas.png" alt="Tugas"></span>
+            <span class="nav-label">Tugas</span>
+        </a>
         <a href="info.html" class="nav-item">
-            <span class="nav-icon">ℹ️</span>
+            <span class="nav-icon"><img src="Images/Icon/Info.png" alt="Info"></span>
             <span class="nav-label">Info</span>
         </a>
     </nav>
