--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             </h1>
             <div class="title-decoration"></div>
         </div>
-        <p class="subtitle">Anak-Anak TKJ 3 Nih</p>
+        <p class="subtitle">Anak Bangun Nusantara X TKJ 3</p>
     </div>
 
     <!-- Bottom Navigation -->
