--- a/detail-vincent.html
+++ b/detail-vincent.html
@@ -191,7 +191,7 @@
 
         <p>
             <b>Umur:</b> 
-            <span id="umurText">-- Tahun</span>
+            <span id="umurText">18 Tahun</span>
             <input id="umurInput" value="-- Tahun">
         </p>
 
@@ -284,3 +284,4 @@
 
 </body>
 </html>
+
