--- a/detail-abi.html
+++ b/detail-abi.html
@@ -209,14 +209,14 @@
 
         <p>
             <b>Hobi:</b> 
-            <span id="hobiText">-</span>
-            <input id="hobiInput" value="-">
+            <span id="hobiText">Basket, bola</span>
+            <input id="hobiInput" value="Basket, bola">
         </p>
 
         <p>
             <b>Cita-cita:</b> 
-            <span id="citaText">-</span>
-            <input id="citaInput" value="-">
+            <span id="citaText">Jadi orang kaya</span>
+            <input id="citaInput" value="Jadi orang kaya">
         </p>
 
         <p>
