--- a/detail-fazar.html
+++ b/detail-fazar.html
@@ -215,8 +215,8 @@
 
         <p>
             <b>Cita-cita:</b> 
-            <span id="citaText">Adalah</span>
-            <input id="citaInput" value="Adalah">
+            <span id="citaText">Nikah sama anya</span>
+            <input id="citaInput" value="-">
         </p>
 
         <p>
@@ -284,4 +284,5 @@
 
 </body>
 </html>
+
 
