--- a/detail-fazar.html
+++ b/detail-fazar.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ini<!DOCTYPE html>
 <html lang="id">
 <head>
     <meta charset="UTF-8">
@@ -215,13 +215,13 @@
 
         <p>
             <b>Cita-cita:</b> 
-            <span id="citaText">Nikah sama anya</span>
+            <span id="citaText">Gak ada</span>
             <input id="citaInput" value="-">
         </p>
 
         <p>
             <b>Motto:</b> 
-            <span id="mottoText">Gak bakal bisa kalau gak coba</span>
+            <span id="mottoText">Saya pdf</span>
             <input id="mottoInput" value="Gak bakal bisa kalau gak coba">
         </p>
 
@@ -284,5 +284,6 @@
 
 </body>
 </html>
+
 
 
