--- a/detail-fazar.html
+++ b/detail-fazar.html
@@ -221,7 +221,7 @@ ini<!DOCTYPE html>
 
         <p>
             <b>Motto:</b> 
-            <span id="mottoText">Saya pdf</span>
+            <span id="mottoText">Ga bakal bisa kalau gak coba</span>
             <input id="mottoInput" value="Gak bakal bisa kalau gak coba">
         </p>
 
@@ -284,6 +284,7 @@ ini<!DOCTYPE html>
 
 </body>
 </html>
+
 
 
 
