--- a/detail-azzam.html
+++ b/detail-azzam.html
@@ -462,7 +462,7 @@
 
         <p>
             <b>Cita-cita:</b> 
-            <span id="citaText">Ke Jepang</span>
+            <span id="citaText">Ke luar negri</span>
             <input id="citaInput" value="-">
         </p>
 
