--- a/jadwal.html
+++ b/jadwal.html
@@ -310,15 +310,17 @@
     <!-- Background Slideshow -->
     <div class="bg-slideshow" id="bgSlideshow"></div>
 
-    <!-- Floating Theme Toggle -->
-    <button id="theme-toggle" class="theme-toggle">
-        <div class="toggle-track">
-            <div class="toggle-thumb">
-                <span class="icon sun">☀️</span>
-                <span class="icon moon">🌙</span>
+    <!-- Top Navigation Bar -->
+    <nav class="top-nav">
+        <button id="theme-toggle" class="theme-toggle">
+            <div class="toggle-track">
+                <div class="toggle-thumb">
+                    <span class="icon sun">☀️</span>
+                    <span class="icon moon">🌙</span>
+                </div>
             </div>
-        </div>
-    </button>
+        </button>
+    </nav>
 
     <!-- Header -->
     <div class="schedule-header">
